# shapeware

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  bcfgLin.json  bcfgWin.json  build.py  build32.bat  build64.bat  build64_2017.bat  build64_2022.bat  buildEclipse.sh  buildMake.sh  buildMakeRel.sh  buildMakeWithExamples.sh  buildWithExamples64.bat  build_2017.bat  shape.py  shapewareConfig.cmake.in
AwsFleetProv/: AwsFleetProv.cpp  AwsFleetProv.h  CMakeLists.txt
BufferService/: BufferService.cpp  BufferService.h  CMakeLists.txt
CommandLineService/: CMakeLists.txt  CommandLineService.cpp  CommandLineService.h
CommandService/: CMakeLists.txt  CommandService.cpp  CommandService.h
CppRestService/: CMakeLists.txt  CppRestService.cpp  CppRestService.h  main.cpp
CurlRestApiService/: CMakeLists.txt  CurlRestApiService.cpp  CurlRestApiService.cpp_  CurlRestApiService.h  main.cpp
MqMessageService/: CMakeLists.txt  MqMessageService.cpp  MqMessageService.h  TaskQueue.h
MqttService/: CMakeLists.txt  MqttService.cpp  MqttService.h
SyslogLogger/: CMakeLists.txt  SyslogLogger.cpp  SyslogLogger.h
WebsocketCppClientService/: CMakeLists.txt  WebsocketCppClientService.cpp  WebsocketCppClientService.h
WebsocketCppService/: CMakeLists.txt  LogStream.cpp  LogStream.h  WebsocketCppService.cpp  WebsocketCppService.h  WsServer.h  WsServerPlain.cpp  WsServerPlain.h  WsServerTls.cpp  WsServerTls.h  index-1338-wss.html  index-1338.html  index-1339.html  index-1340.html
WebsocketService/: CMakeLists.txt  WebsocketService.cpp  WebsocketService.h
ZeroMqClientService/: CMakeLists.txt  ZeroMqClientService.cpp  ZeroMqClientService.h
ZeroMqService/: CMakeLists.txt  ZeroMqService.cpp  ZeroMqService.h
cmake/: Findcpprestsdk.cmake
cmake/modules/: FindZeroMQ.cmake  Findpaho.cmake
examples/: CMakeLists.txt
examples/MsgCmd/: CMakeLists.txt  MsgCmd.cpp  MsgCmd.h  README.md
examples/MsgCmd/configuration/: shape__MqMessageService-MsgCmd.json  shape__MqMessageService-MsgCmdEcho.json  shape__MqMessageService.json  shape__MsgCmd.json  shape__MsgCmdEcho.json
examples/MsgCmd/configurationLin/: config.json
examples/MsgCmd/configurationWin/: config.json
examples/MsgCmdEcho/: CMakeLists.txt  MsgCmdEcho.cpp  MsgCmdEcho.h
include/: IBufferService.h  ICommandService.h  IIdentityProvider.h  IMessageService.h  IMqttConnectionParsProvider.h  IMqttService.h  IRestApiService.h  IWebsocketClientService.h  IWebsocketService.h  IWebsocketServiceExt.h  IZeroMqClientService.h  IZeroMqService.h  JsonMacro.h  TaskQueue2.h  mqtt_utils.h
startup/: CMakeLists.txt  main.cpp
startup/configuration/: config.json  shape__SyslogLogger.json
startup/configurationLin/: config.json  shape__GTestRunner.json  shape__TestWebsocketService-1339.json  shape__WebsocketCppClientService-2.json
startup/configurationWin/: config.json  shape__TestCppRestService.json  shape__TestWebsocketService-1339.json  shape__TestWebsocketService-1340.json  shape__TestWebsocketService.json  shape__WebsocketCppClientService-1.json  shape__WebsocketCppService-1340.json
tests/: CMakeLists.txt
tests/TestBufferService/: CMakeLists.txt  TestBufferService.cpp  TestBufferService.h
tests/TestBufferService/configuration/: config.json  shape__BufferService.json  shape__TestBufferService.json  shape__TraceFileService.json
tests/TestCppRestService/: CMakeLists.txt  TestCppRestService.cpp  TestCppRestService.h
tests/TestCurlRestApiService/: CMakeLists.txt  TestCurlRestApiService.cpp  TestCurlRestApiService.h
tests/TestCurlRestApiService/configuration/: config.json  shape__CurlRestApiService.json  shape__TestCurlRestApiService.json
tests/TestMqttService/: CMakeLists.txt  TestMqttService.cpp  TestMqttService.h
tests/TestMqttService/configuration/: config.json  shape__MqttService1.json  shape__MqttService2.json  shape__TestMqttService.json  shape__TraceFileService.json
tests/TestSimulationIRestApiService/: CMakeLists.txt  TestSimulationIRestApiService.cpp  TestSimulationIRestApiService.h
tests/TestWebsocketService/: CMakeLists.txt  TestWebsocketService.cpp  TestWebsocketService.h
tests/TestWebsocketService/configuration/: config.json  shape__WebsocketCppService-1339.json  shape__WebsocketCppService-1340.json
tests/TestWebsocketService/configurationLin/: config.json
tests/TestZeroMqService/: CMakeLists.txt  TestZeroMqService.cpp  TestZeroMqService.h
tests/TestZeroMqService/configuration/: config.json  shape__TestZeroMqService.json  shape__TraceFileService.json  shape__ZeroMqService-rep.json  shape__ZeroMqService-req.json
tests/include/: ITestSimulationIRestApiService.h
